Update and rename Merkle_Tree.md to Merkle_Tree.adoc

--- a/DS_Questions/Data_Structures/Trees/BinaryTree/Types_Variants/Merkle_Tree.adoc
+++ b/DS_Questions/Data_Structures/Trees/BinaryTree/Types_Variants/Merkle_Tree.adoc
@@ -1,37 +1,24 @@
-**Merkle / Merkal / Merkel Tree**
-- [Usage/Advantages](#us)
-  - [1. Retrieving lost/corrupted data in log(n) steps](#dv)
-- **[Self youtube Video](https://youtu.be/J5tphidJ9Uk)**
+:toc:
+:toclevels: 6
 
-## Merkle Tree
-- Binary tree storing hash of data(big files(audio,video,txt) etc) as leaf node.
-- All other nodes stores hash of their child nodes.
-- **Examples:** git, bitcoin uses Merkle tree.
+== link:https://youtu.be/J5tphidJ9Uk[self video]
+
+== Merkle Tree
+* Binary tree storing hash of data(big files(audio,video,txt) etc) as leaf node.
+* All other nodes stores hash of their child nodes.
+* **Examples:** git, bitcoin uses Merkle tree.
 ```html
-Data: let's meet  at	8 	in 	tombstone 	back 	park
 
-                        h15
+                     h7 = hash(h5+h6)
                     /         \
-                h13               h14
+        h5 = hash(h1+h2)      h6 = hash(h3+h4)
               /     \           /       \
-            h9        h10     h11         h12
-           /  \       / \    /   \        /  \
-hash     h1    h2   h3  h4  h5    h6    h7     h8
-data -> let's meet  at	8 	in 	  tom  	back 	park 
-
-hash(let's) -> h1     hash(h1+h2) -> h9     hash(h9+h10) => h13
-hash(meet)  -> h2     hash(h3+h4) -> h10    hash(h11+h12) => h14
-hash(at)    -> h3     hash(h5+h6) -> h11    hash(h13+h14) => h15
-hash(8)     -> h4     hash(h7+h8) -> h12
-hash(in)    -> h5
-hash(tom)   -> h6
-hash(back)  -> h7
-hash(park)  -> h8
+            h1        h2      h3         h4
+      transaction1   trans2  trans3    trans4
 ```
 
-<a name=us></a>
-## Usage of Merkle Tree
-### 1. Retrieving lost/corrupted data in log(n) steps
+== Usage of Merkle Tree
+=== 1. Retrieving lost/corrupted data in log(n) steps
 Suppose alice want to send Bob data="let's meet  at	8 	in 	  tom  	back 	park", But john(intruder) changes the data.
 ```html
           Alice                                           
