--- a/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Sorted/1st_&_last_pos_of_ele_in_duplicate_allowed.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Sorted/1st_&_last_pos_of_ele_in_duplicate_allowed.adoc
@@ -155,3 +155,38 @@ public:
   }
 };
 ```
+==== Python
+```py
+from typing import List
+
+class Solution:
+    def search(self, nums: List[int], target: int, isFirst: bool) -> int:
+        begin = 0
+        end = len(nums) - 1
+
+        while begin <= end:
+            mid = (begin + end) // 2
+
+            if nums[mid] == target:
+                if isFirst:
+                    if mid == begin or nums[mid - 1] < target:
+                        return mid
+                    end = mid - 1
+                else:
+                    if mid == end or nums[mid + 1] > target:
+                        return mid
+                    begin = mid + 1
+            elif nums[mid] > target:
+                end = mid - 1
+            else:  # nums[mid] < target
+                begin = mid + 1
+
+        return -1
+
+    def searchRange(self, nums: List[int], target: int) -> List[int]:
+        firstOccurrence = self.search(nums, target, True)
+        if firstOccurrence == -1:   # No need to search for the second occurrence
+            return [-1, -1]
+        lastOccurrence = self.search(nums, target, False)
+        return [firstOccurrence, lastOccurrence]
+```
