--- a/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Sorted/1st_&_last_pos_of_ele_in_duplicate_allowed.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Sorted/1st_&_last_pos_of_ele_in_duplicate_allowed.adoc
@@ -190,3 +190,68 @@ class Solution:
         lastOccurrence = self.search(nums, target, False)
         return [firstOccurrence, lastOccurrence]
 ```
+
+==== Rust
+```rs
+impl Solution {
+	pub fn search(a: Vec<i32>, target: i32, isFirst: bool) -> i32{
+	  
+      let mut begin = 0;
+      let mut end = a.len() as i32 - 1;
+
+
+        while begin <= end {
+            let mut mid = (begin+end)/2;
+
+            if a[mid as usize] == target {     //This can be middle Occurence
+                if isFirst {    //Searching for 1st Occurence
+
+                    //if mid is 1st element || left<mid. We found 1st occurence
+                    if mid == begin || a[mid as usize-1] < target {
+                        return mid as i32;
+                    }
+
+                    //Search on left side
+                    end = mid - 1;
+            }
+            else     //Searching last occurence
+            {
+                //if mid is last element || mid+1>target. We found last occurence
+                if mid == end || a[mid as usize+1] > target {
+                    return mid as i32;
+                }
+
+                //Search on right side
+                begin = mid+1;
+            }
+            }
+            else if a[mid as usize] > target {
+                end = mid - 1;
+            }
+            else {    //a[mid] < target
+                begin = mid + 1;
+            }
+
+	  }//while
+	  -1
+	}   
+    pub fn search_range(a: Vec<i32>, target: i32) -> Vec<i32> {
+        let mut out:Vec<i32> = Vec::new();
+        if a.len() == 0  || a.len() == 1 && a[0] != target {
+            out.push(-1);
+            out.push(-1);
+            return out;
+        }
+        let firstOccurence:i32 = Self::search(a.clone(), target, true);
+        if firstOccurence == -1 {   //No need to search 2nd
+            out.push(-1);
+            out.push(-1);
+            return out;
+        }
+        let lastOccurence:i32 = Self::search(a, target, false);
+        out.push(firstOccurence);
+        out.push(lastOccurence);
+        out
+    }
+}
+```
