--- a/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Sorted/1st_&_last_pos_of_ele_in_duplicate_allowed.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Sorted/1st_&_last_pos_of_ele_in_duplicate_allowed.adoc
@@ -1,7 +1,7 @@
 :toc:
 :toclevels: 6
 
-== link:https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/[Find First and Last Position of Element in Sorted Array]
+== link:https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/[34. Find First and Last Position of Element in Sorted Array]
 * Given sorted array in ascending order, find the starting and ending position of a given target value. Duplicates are allowed. If target is not found in the array, return [-1, -1].
 * *Algorithm must take O(log n) runtime complexity*
 ```c
