--- a/DS_Questions/Questions/vectors_arrays/Intervals/Number_of_Flowers_in_Full_Bloom.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Intervals/Number_of_Flowers_in_Full_Bloom.adoc
@@ -104,3 +104,55 @@ public:
     }
 };
 ```
+
+=== Approach-3. Create 2 seperate start_bloosm, end_bloosm arrays. Sort. Works
+==== Logic
+1. Create 2 seperate arrays for start, end times of flower's bloosm. 
+```c
+flowers = [[1,6],[3,7],[9,12],[4,13]], poeple = [2,3,7,11]
+ bloom_start = [1,3,9,4]
+ bloosm_end = [6,7,12,13]
+ 
+  1  2  3  4  5  6  7  8  9  10  11  12  13
+  |--------------|
+        |-----------|
+           |-----------------------------|
+                          |-----------|
+     /\ /\         /\            /\
+```
+2. Sort both of them.
+```c
+ bloom_start = [1,3,4,9]
+ bloosm_end = [6,7,12,13]
+```
+3. Binary search people's time bloosm_start. if 
+==== Complexity
+==== Code
+===== CPP
+```cpp
+class Solution {
+public:
+    vector<int> fullBloomFlowers(vector<vector<int>>& flowers, vector<int>& people) {
+        vector<int> bloosm_start;
+        vector<int> bloosm_end;
+        for (int i=0;i<flowers.size();++i){
+            bloosm_start.push_back(flowers[i][0]);
+            bloosm_end.push_back(flowers[i][1]);
+        }
+        sort(bloosm_start.begin(), bloosm_start.end());
+        sort(bloosm_end.begin(), bloosm_end.end());
+
+        vector<int> out;
+        for (auto i:people) {
+            // Binary Search in bloosm_start array
+            int flower_starting_bloosm_index = upper_bound(bloosm_start.begin(), bloosm_start.end(), i) - bloosm_start.begin();
+
+            // Binary Search in bloosm_end array
+            int flower_bloosm_end_index = lower_bound(bloosm_end.begin(), bloosm_end.end(), i) - bloosm_end.begin();
+
+            out.push_back(flower_starting_bloosm_index-flower_bloosm_end_index);
+        }
+        return out;
+    }
+};
+```
